# playwright-python-mcp

./: pyproject.toml  server.py
src/playwright_server/: server.py
